Support different data portions for word alignment
train and traindevtest

--- a/retrain.ini
+++ b/retrain.ini
@@ -6,16 +6,17 @@ deps = retrain/%{frnlang}-eng.dict
 
 ### DATA ######################################################################
 
-[retrain/eng-%{frnlang}.%{lang}.tok]
-cond = %{lang in ('eng', frnlang)}
-outputs = retrain/eng-%{frnlang}.%{frnlang}.tok retrain/eng-%{frnlang}.eng.ids retrain/eng-%{frnlang}.%{frnlang}.ids
+[retrain/eng-%{frnlang}-%{part}.%{lang}.tok]
+cond = %{lang in ('eng', frnlang) and part in ('traindevtest', 'train')}
+outputs = retrain/eng-%{frnlang}-%{part}.%{frnlang}.tok retrain/eng-%{frnlang}-%{part}.eng.ids retrain/eng-%{frnlang}-%{part}.%{frnlang}.ids
 dep.retraindata_tok_pairs = src/python/retraindata_tok_pairs.py
 recipe =
 	set -e
 	echo For this recipe to execute successfully, the .tok files for the
 	echo relevant documents must already exist. Produce the retrain-%{frnlang}
 	echo target in produce.ini to ensure that.
-	python3 %{retraindata_tok_pairs} %{frnlang}
+	mkdir -p retrain
+	python3 %{retraindata_tok_pairs} %{frnlang} %{part}
 
 ### WORD ALIGNMENT ############################################################
 
@@ -23,21 +24,21 @@ recipe =
 # http://fabioticconi.wordpress.com/2011/01/17/how-to-do-a-word-alignment-with-giza-or-mgiza-from-parallel-corpus/
 
 # Convert to lower case
-[retrain/eng-%{frnlang}.%{lang}.low]
+[retrain/eng-%{frnlang}-%{part}.%{lang}.low]
 cond = %{lang in ('eng', frnlang)}
-dep.tok = retrain/eng-%{frnlang}.%{lang}.tok
+dep.tok = retrain/eng-%{frnlang}-%{part}.%{lang}.tok
 recipe = cat %{tok} | tr '[:upper:]' '[:lower:]' > %{target}
 
 # Create vocabulary files and numeric versions of texts
-[retrain/eng-%{frnlang}.%{lang}.%{x}]
+[retrain/eng-%{frnlang}-%{part}.%{lang}.%{x}]
 cond = %{lang in ('eng', frnlang)}
-engsnt = retrain/eng-%{frnlang}.eng.snt
-frnsnt = retrain/eng-%{frnlang}.%{frnlang}.snt
-engvcb = retrain/eng-%{frnlang}.eng.vcb
-frnvcb = retrain/eng-%{frnlang}.%{frnlang}.vcb
+engsnt = retrain/eng-%{frnlang}-%{part}.eng.snt
+frnsnt = retrain/eng-%{frnlang}-%{part}.%{frnlang}.snt
+engvcb = retrain/eng-%{frnlang}-%{part}.eng.vcb
+frnvcb = retrain/eng-%{frnlang}-%{part}.%{frnlang}.vcb
 outputs =%{engsnt} %{frnsnt} %{engvcb} %{frnvcb}
-dep.englow = retrain/eng-%{frnlang}.eng.low
-dep.frnlow = retrain/eng-%{frnlang}.%{frnlang}.low
+dep.englow = retrain/eng-%{frnlang}-%{part}.eng.low
+dep.frnlow = retrain/eng-%{frnlang}-%{part}.%{frnlang}.low
 recipe =
 	set -e
 	set -o pipefail
@@ -45,26 +46,26 @@ recipe =
 	touch %{outputs}
 
 # Cluster vocabulary into classes
-[retrain/eng-%{frnlang}.%{lang}.vcb.classes]
+[retrain/eng-%{frnlang}-%{part}.%{lang}.vcb.classes]
 cond = %{lang in ('eng', frnlang)}
-dep.low = retrain/eng-%{frnlang}.%{lang}.low
+dep.low = retrain/eng-%{frnlang}-%{part}.%{lang}.low
 recipe = ./ext/mgizapp/bin/mkcls -n10 -p%{low} -V%{target}
 
 # Make co-occurrence file
-[retrain/%{frnlang}-eng.cooc]
-dep.srcvcb = retrain/eng-%{frnlang}.%{frnlang}.vcb
-dep.trgvcb = retrain/eng-%{frnlang}.eng.vcb
-dep.srcvcbclasses = retrain/eng-%{frnlang}.%{frnlang}.vcb.classes
-dep.trgvcbclasses = retrain/eng-%{frnlang}.eng.vcb.classes
-dep.snt = retrain/eng-%{frnlang}.%{frnlang}.snt
+[retrain/%{frnlang}-eng-%{part}.cooc]
+dep.srcvcb = retrain/eng-%{frnlang}-%{part}.%{frnlang}.vcb
+dep.trgvcb = retrain/eng-%{frnlang}-%{part}.eng.vcb
+dep.srcvcbclasses = retrain/eng-%{frnlang}-%{part}.%{frnlang}.vcb.classes
+dep.trgvcbclasses = retrain/eng-%{frnlang}-%{part}.eng.vcb.classes
+dep.snt = retrain/eng-%{frnlang}-%{part}.%{frnlang}.snt
 recipe = ./ext/mgizapp/bin/snt2cooc %{target} %{srcvcb} %{trgvcb} %{snt}
 
 # Word-align
-[retrain/%{frnlang}-eng.dict]
-dep.srcvcb = retrain/eng-%{frnlang}.%{frnlang}.vcb
-dep.trgvcb = retrain/eng-%{frnlang}.eng.vcb
-dep.snt = retrain/eng-%{frnlang}.%{frnlang}.snt
-dep.cooc = retrain/%{frnlang}-eng.cooc
+[retrain/%{frnlang}-eng-%{part}.dict]
+dep.srcvcb = retrain/eng-%{frnlang}-%{part}.%{frnlang}.vcb
+dep.trgvcb = retrain/eng-%{frnlang}-%{part}.eng.vcb
+dep.snt = retrain/eng-%{frnlang}-%{part}.%{frnlang}.snt
+dep.cooc = retrain/%{frnlang}-eng-%{part}.cooc
 ncpus = 4
 recipe =
 	set -e
