Renamed retrain -> wordalign

--- a/produce.ini
+++ b/produce.ini
@@ -59,17 +59,6 @@ recipe =
 
 ### DERIVATION PROJECTION #####################################################
 
-[retrain-%{lang}]
-type = task
-depfile = retrain/eng-%{lang}.d
-
-[retrain/eng-%{lang}.d]
-dep.retraindata_tok = src/python/retraindata_tok.py
-recipe =
-	set -e
-	mkdir -p retrain
-	python3 %{retraindata_tok} %{lang} > %{target}
-
 [out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.wordalign]
 dep.wordalign = src/python/wordalign.py
 recipe =
@@ -81,7 +70,10 @@ recipe =
 dep.sentalign = src/python/sentalign.py
 dep.foroff = out/%{lang}/%{pr}/%{tid}/auto.tok.off
 dep.engoff = out/eng/%{sid[:2]}/%{sid}/auto.tok.off
-recipe = python %{sentalign} %{engoff} %{foroff} > %{target}
+recipe =
+	set -e
+	mkdir -p out/%{lang}/%{pr}/%{tid}/proj/%{sid}
+	python %{sentalign} %{engoff} %{foroff} > %{target}
 
 [out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj.parse.tags]
 dep.derproj = src/prolog/derproj.pl
