Separated output dirs wordalign and proj

--- a/produce.ini
+++ b/produce.ini
@@ -59,6 +59,17 @@ recipe =
 
 ### DERIVATION PROJECTION #####################################################
 
+[proj-%{lang}-train]
+type = task
+depfile = proj/proj-%{lang}-train.d
+
+[proj/proj-%{lang}-train.d]
+dep.data_proj = src/python/data_proj.py
+recipe =
+	set -e
+	mkdir -p proj
+	python3 %{data_proj} %{lang} train > %{target}
+
 [out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.wordalign]
 dep.wordalign = src/python/wordalign.py
 recipe =
