Derivation projection for both portions
train and traindevtest

--- a/produce.ini
+++ b/produce.ini
@@ -59,23 +59,26 @@ recipe =
 
 ### DERIVATION PROJECTION #####################################################
 
-[proj-%{lang}-train]
+[proj-%{lang}-%{part}]
+cond = %{part in ('train', 'traindevtest')}
 type = task
-depfile = proj/proj-%{lang}-train.d
+depfile = proj/proj-%{lang}-%{part}.d
 
-[proj/proj-%{lang}-train.d]
+[proj/proj-%{lang}-%{part}.d]
+cond = %{part in ('train', 'traindevtest')}
 dep.data_proj = src/python/data_proj.py
 recipe =
 	set -e
 	mkdir -p proj
-	python3 %{data_proj} %{lang} train > %{target}
+	python3 %{data_proj} %{lang} %{part} > %{target}
 
-[out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.wordalign]
+[out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj-%{part}.wordalign]
+cond = %{part in ('train', 'traindevtest')}
 dep.wordalign = src/python/wordalign.py
 recipe =
 	set -e
 	mkdir -p out/%{lang}/%{pr}/%{tid}/proj/%{sid}
-	python %{wordalign} %{lang} %{tid} %{sid} > %{target}
+	python %{wordalign} %{lang} %{tid} %{sid} %{part} > %{target}
 
 [out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.sentalign]
 dep.sentalign = src/python/sentalign.py
@@ -86,11 +89,12 @@ recipe =
 	mkdir -p out/%{lang}/%{pr}/%{tid}/proj/%{sid}
 	python %{sentalign} %{engoff} %{foroff} > %{target}
 
-[out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj.parse.tags]
+[out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj-%{part}.parse.tags]
+cond = %{part in ('train', 'traindevtest')}
 dep.derproj = src/prolog/derproj.pl
 deps = src/prolog/der.pl src/prolog/util.pl src/prolog/catobj.pl src/prolog/sr.pl src/prolog/slashes.pl src/prolog/ccg.pl
 dep.der = out/eng/%{sid[:2]}/%{sid}/auto.der.incomplete
-dep.wordalign = out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.wordalign
+dep.wordalign = out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj-%{part}.wordalign
 dep.sentalign = out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.sentalign
 dep.toff = out/%{lang}/%{pr}/%{tid}/auto.tok.off
 dep.soff = out/eng/%{sid[:2]}/%{sid}/auto.tok.off
