Further steps towards retraining EasyCCG
Next, we need validation data.

--- a/projtrain.ini
+++ b/projtrain.ini
@@ -13,7 +13,10 @@ deps = projtrain/experiments/%{lang}_projected_dev/projected.eval
 [projtrain/experiments/%{lang}_projected_train/gold.parse.tags]
 out.dev = projtrain/experiments/%{lang}_projected_dev/gold.parse.tags
 dep.data_projtrain = src/python/data_projtrain.py
-recipe = %{data_projtrain} %{lang} %{target} %{dev}
+recipe =
+	set -e
+	mkdir -p projtrain/experiments/%{lang}_projected_{dev,train}
+	python3 %{data_projtrain} %{lang} %{target} %{dev}
 
 [projtrain/experiments/%{lang}_projected_dev/gold.parse.tags]
 deps = projtrain/experiments/%{lang}_projected_train/gold.parse.tags
@@ -26,7 +29,7 @@ depl.polyglot2turian = ./src/python/polyglot2turian.py
 recipe =
 	set -e
 	mkdir -p projtrain/polyglot-%{lang}
-	%{polyglot2turian} %{pkl} > %{target}
+	python %{polyglot2turian} %{pkl} > %{target}
 
 [projtrain/polyglot-%{lang}/embeddings.words]
 outputs = projtrain/polyglot-%{lang}/embedings.vectors
@@ -136,4 +139,4 @@ dep.gold = projtrain/experiments/%{lang}_projected_dev/gold.stagged
 dep.eval_stagged = src/python/eval_stagged.py
 recipe =
 	set -o pipefail
-	%{eval_stagged} %{gold} %{projected} | tee %{target}
+	python3 %{eval_stagged} %{gold} %{projected} | tee %{target}
