Allow S[b] as top category

--- a/produce.ini
+++ b/produce.ini
@@ -187,7 +187,7 @@ dep.model = models/parse/%{lang}.model
 recipe =
 	set -e
 	set -o pipefail
-	cat %{constrained} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 --log log/easyccg/%{lang}.log --output-terminator '^$' --output-prelude 1 java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[intj] --outputFormat boxer | python %{cac_renumber} > %{target}
+	cat %{constrained} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 --log log/easyccg/%{lang}.log --output-terminator '^$' --output-prelude 1 java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[b] S[intj] --outputFormat boxer | python %{cac_renumber} > %{target}
 	#cat %{constrained} | java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[intj] --outputFormat boxer 2> %{target}.log > %{target}
 
 # Add tags from other layers to parse
