Failure armor for recipe

--- a/produce.ini
+++ b/produce.ini
@@ -196,7 +196,10 @@ dep.parse = out/%{lang}/%{pr}/%{sid}/%{user}.parse
 dep.insert = ./src/python/cac_addtags.py
 deps = src/python/caclib.py
 dep.off = out/%{lang}/%{pr}/%{sid}/auto.tok.off
-recipe = cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut -d ' ' -f 2 %{off}) > %{target}
+recipe =
+	set -e
+	set -o pipefail
+	cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut -d ' ' -f 2 %{off}) > %{target}
 
 # Convert derivations to XML
 [out/%{lang}/%{pr}/%{sid}/%{user}.der.xml.incomplete]
