Revert "Added recipe for parsing to .auto format"
This reverts commit 665758d3afb67cc7d5b9d045cebc9dac32d506ce.

--- a/produce.ini
+++ b/produce.ini
@@ -176,17 +176,6 @@ recipe =
 	set -o pipefail
 	cat %{tok} | python %{add_supertag_constraints} %{super} | python %{add_span_constraints} %{span} > %{target}
 
-[out/%{lang}/%{pr}/%{sid}/%{user}.auto]
-dep.constrained = out/%{lang}/%{pr}/%{sid}/%{user}.constrained
-dep.easyccg = ext/easyccg/easyccg.jar
-#generic = %{'' if lang == 'en' else ' -g'}
-generic =
-dep.model = models/parse/%{lang}.model
-recipe =
-	set -e
-	set -o pipefail
-	cat %{constrained} | java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[b] S[intj] --outputFormat ccgbank > %{target}
-
 [out/%{lang}/%{pr}/%{sid}/%{user}.parse]
 dep.constrained = out/%{lang}/%{pr}/%{sid}/%{user}.constrained
 dep.cac_renumber = src/python/cac_renumber.py
@@ -194,6 +183,7 @@ dep.easyccg = ext/easyccg/easyccg.jar
 #generic = %{'' if lang == 'en' else ' -g'}
 generic =
 dep.model = models/parse/%{lang}.model
+# TODO use CCGrebank-based model!
 recipe =
 	set -e
 	set -o pipefail
