Toy tokenization rule for non-Ucto languages

--- a/produce.ini
+++ b/produce.ini
@@ -107,6 +107,17 @@ recipe = swipl -l %{derproj} -g main %{der} %{wordalign} %{sentalign} %{toff} %{
 # into the database.
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob.noncorr]
+cond = %{user == 'auto' and lang not in ('deu', 'eng', 'ita', 'nld')}
+dep.tokenize_quick = src/python/tokenize_quick.py
+dep.raw = raw/%{lang}/%{pr}/%{sid}.raw
+recipe =
+	set -e
+	set -o pipefail
+	mkdir -p `dirname %{target}`
+	cat %{raw} | python3 %{tokenize_quick} > %{target}
+	
+
+[out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob.noncorr]
 cond = %{user == 'auto'}
 dep.raw = raw/%{lang}/%{pr}/%{sid}.raw
 dep.txt2iob = src/python/txt2iob.py
